--- a/index.html
+++ b/index.html
@@ -18,39 +18,30 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <title>HAHAHAEveryDay</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
 <body>
-    <div class="container-fluid">
-    <div class="row">
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-</div>
-<div class="row">
-  <div class="col-md-8">.col-md-8</div>
-  <div class="col-md-4">.col-md-4</div>
-</div>
-<div class="row">
-  <div class="col-md-4">.col-md-4</div>
-  <div class="col-md-4">.col-md-4</div>
-  <div class="col-md-4">.col-md-4</div>
-</div>
-<div class="row">
-  <div class="col-md-6">.col-md-6</div>
-  <div class="col-md-6">.col-md-6</div>
-</div>
+    <div class="container" id="centeredBox">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h1>Weclone to HAHA  </br> I hope u will get some fun </h1>
+                <h2>HAHA</h2>
+                <img src="image/4.jpg" class="img-responsive">
+                <img src="image/3.jpg" class="img-responsive">
+                <img src="image/2.jpg" class="img-responsive">
+                <img src="image/1.jpg" class="img-responsive">
+            </div>
+        </div>
+
+        <p>HunryLeung <a href="https://www.facebook.com/hunry.leung">https://www.facebook.com/hunry.leung</a>
+        </p>
+        <script src="js/timeOfDay.js"></script>
     </div>
+
+
 </body>
 
 </html>
